Added bean configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,4 @@ team.name=The Mouse Club
 
 
 #Lazy initialization on a global level
-spring.main.lazy-initialization=true
+#spring.main.lazy-initialization=true
