added delete function

--- a/cruddemo/src/main/resources/application.properties
+++ b/cruddemo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 
 # Turn off the Spring Boot banner
-#spring.main.banner-mode=off
+spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level to warn
 logging.level.root=warn
